--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,5 +1,7 @@
-<h1><%= @product.name %></h1>
-<h3>From <%= @product.country_of_origin %></h3>
+<h1>Enter product name:<%= @product.name %></h1>
+<h3>Enter product country of origin: <%= @product.country_of_origin %></h3>
+
+<p><%= link_to "Add a new review", new_product_review_path(@product) %></p>
 
 <% if @product.reviews.any? %>
 <p>Product Reviews</p>
