--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Welcome, <%= current_user.email %></h1>
-<p>Create and add products</p>
+<h1>Welcome User </h1>
+<p>Add a comment to a post</p>
 
 
