--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -6,9 +6,13 @@
   <div class="w-100">
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <%= link_to 'Users', users_path, class: 'nav-link' %> 
+        </li>
         <% if user_signed_in? %>
         <li class="nav-item">
           <%= link_to 'Sign out', destroy_user_session_path, method: :delete, class: 'nav-link' %>
+          <%= link_to 'Reviews', user_path(current_user) %>
         </li>
         <% else %>
         <li class="nav-item">
