--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -7,7 +7,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <%= link_to 'Users', users_path, class: 'nav-link' %> 
+          <%= link_to 'Admin Portal', admin_path, class: 'nav-link' %> 
         </li>
         <% if user_signed_in? %>
         <li class="nav-item">
