follow advisor tips and make changes to fix seeding and make the products page show up

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,5 +5,5 @@
 <img src="/specialty_food_store/app/assets/images/food background.JPG" class="img-fluid" alt="Responsive image">
 
 <% if user_signed_in? %>
-  <%= render 'reviews/review_form' %>
+<p><%= link_to "Create new product", products_path %></p>
 <% end %>
